--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@capacitor/android": "^3.1.2",
     "@capacitor/core": "3.1.2",
+    "@ionic-native/core": "^5.35.0",
+    "@ionic-native/geolocation": "^5.35.0",
+    "@ionic-native/sqlite": "^5.35.0",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-sqlite-storage": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
